# esp-firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  firmware.manifest  partitions.csv  platformio.back  platformio.ini  sdkconfig  sdkconfig.defaults
main/: Kconfig  Roboto_black_54x72.c  amp.cpp  amp.hpp  cmd_decl.hpp  cmd_system.cpp  cmd_volume.cpp  component.mk  console.cpp  console.hpp  constants.h  font.h  globals.cpp  globals.hpp  ipc_command.h  ir.cpp  ir.hpp  led.cpp  led.hpp  main.cpp  oled.cpp  oled.hpp  pch.hpp  temperature.cpp  temperature.hpp  update.cpp  update.hpp  updater.cpp  updater.hpp  util.cpp  util.hpp  version.hpp  web.cpp  web.hpp  websocket.cpp  websocket.hpp
main/aws/: aws.cpp  aws.hpp
main/certs/: aws.crt  aws.key  aws.pubkey  letsencrypt.chain.pem
main/homekit/: homekit.cpp  homekit.hpp
main/html/: index.html
